--- a/main/get_data.ipynb
+++ b/main/get_data.ipynb
@@ -21,37 +21,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save data from gdf file to csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
-    "labels = [\"A01T\", \"A01E\", \"A02T\", \"A02E\",\"A03T\",\"A03E\",\"A04T\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
-    "\n",
-    "# Iterate over the filenames and labels\n",
-    "for filename, label in zip(filenames, labels):\n",
-    "    # Read the raw data\n",
-    "    filename='../datasets/BCICIV_2a_gdf/'+filename\n",
-    "    raw = mne.io.read_raw_gdf(filename)\n",
-    "    \n",
-    "    # Convert to DataFrame\n",
-    "    df = raw.to_data_frame()\n",
-    "    \n",
-    "    # Save to CSV\n",
-    "    df.to_csv('excel/'+label + '.csv', index=False)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "get events and positions from gdf files\n"
    ]
   },
@@ -61,32 +30,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = '../datasets/BCICIV_2a_gdf/A01T.gdf'\n",
-    "raw = mne.io.read_raw_gdf(filename)\n",
-    "\n",
-    "# Access event information from the raw object\n",
-    "events, event_id = mne.events_from_annotations(raw)\n",
-    "\n",
-    "#the list have the dictionary that map each events' id  to events' labels\n",
-    "events_id_labels = list(event_id.keys())\n",
-    "\n",
-    "#create array for gather togther events' type and positions\n",
-    "events_with_labels= np.zeros_like(events)\n",
+    "filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
+    "labels = [\"A01T\", \"A01E\", \"A02T\", \"A02E\",\"A03T\",\"A03E\",\"A04T\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
     "\n",
     "\n",
-    "for i in range(len(events)):\n",
-    "    events_with_labels[i,0]=events[i,0]\n",
-    "    id=events[i,2]\n",
-    "    events_with_labels[i,1]=events_id_labels[id-1] # be in dalil ke dar list event ha ma id 10 drim vali araye events_id_labels k az tarigh key dastresi peyda krdim yedone adadash paiin tare\n",
+    "events_with_labels_arrays = {}\n",
+    "\n",
+    "for filename, label in zip(filenames, labels):\n",
+    "\n",
+    "    filename='../datasets/BCICIV_2a_gdf/'+filename\n",
+    "    raw = mne.io.read_raw_gdf(filename)\n",
+    "\n",
+    "    # Access event information from the raw object\n",
+    "    events, event_id = mne.events_from_annotations(raw)\n",
+    "\n",
+    "    #the list have the dictionary that map each events' id  to events' labels\n",
+    "    events_id_labels = list(event_id.keys())\n",
+    "\n",
+    "    #create array for gather togther events' type and positions\n",
+    "    temp= np.zeros_like(events)\n",
     "\n",
     "\n",
+    "    for i in range(len(events)):\n",
+    "        temp[i,0]=events[i,0]\n",
+    "        id=events[i,2]\n",
+    "        temp[i,1]=events_id_labels[id-1] # be in dalil ke dar list event ha ma id 10 drim vali araye events_id_labels k az tarigh key dastresi peyda krdim yedone adadash paiin tare\n",
+    "\n",
+    "    events_with_labels_arrays[label] = temp\n",
+    "\n",
+    "    \n",
     "# Get the sample indices of the events\n",
     "#event_positions_samples = events[:, 0]\n",
     "\n",
     "# Get the corresponding time points from raw\n",
-    "#event_positions_times = raw.times[event_positions_samples]    \n",
-    "\n",
-    "\n"
+    "#event_positions_times = raw.times[event_positions_samples]    \n"
    ]
   },
   {
@@ -133,6 +110,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "create training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "see all information in files"
    ]
   },
@@ -163,6 +155,37 @@
     "\n",
     "# Print event IDs\n",
     "print(event_id)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save data from gdf file to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
+    "labels = [\"A01T\", \"A01E\", \"A02T\", \"A02E\",\"A03T\",\"A03E\",\"A04T\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
+    "\n",
+    "# Iterate over the filenames and labels\n",
+    "for filename, label in zip(filenames, labels):\n",
+    "    # Read the raw data\n",
+    "    filename='../datasets/BCICIV_2a_gdf/'+filename\n",
+    "    raw = mne.io.read_raw_gdf(filename)\n",
+    "    \n",
+    "    # Convert to DataFrame\n",
+    "    df = raw.to_data_frame()\n",
+    "    \n",
+    "    # Save to CSV\n",
+    "    df.to_csv('excel/'+label + '.csv', index=False)\n"
    ]
   }
  ],
