write a create training data block for create X_train and stick events to the end of each row of data in each 1000 row of trials

--- a/main/get_data.ipynb
+++ b/main/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,10 +115,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "labels = [\"A01T\", \"A02T\", \"A03T\",\"A04T\",\"A05T\",\"A06T\",\"A07T\",\"A08T\",\"A09T\"]\n",
+    "\n",
+    "X_train=[]\n",
+    "\n",
+    "for label in labels:\n",
+    "\n",
+    "    temp_data=data_arrays[label]\n",
+    "    temp_events=events_with_labels_arrays[label]\n",
+    "    for i in range(len(temp_events)):\n",
+    "    \n",
+    "        if temp_events[i,1]==769 or temp_events[i,1]==770 or temp_events[i,1]==771 or temp_events[i,1]==772 :\n",
+    "\n",
+    "            ev=temp_events[i,1]\n",
+    "            position=temp_events[i,0]\n",
+    "            for j in range(position, position+1000):\n",
+    "\n",
+    "                temp=np.append(temp_data[j,1:23],ev)\n",
+    "                X_train.append(temp)\n",
+    "            \n",
+    "                \n",
+    "                \n"
+   ]
   },
   {
    "attachments": {},
