write and merge the branches, also write a py file and converts get_data block to function and use them in main . then we seprate lable array from features array.

--- a/main/get_data.ipynb
+++ b/main/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,44 +26,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
-    "labels = [\"A01T\", \"A01E\", \"A02T\", \"A02E\",\"A03T\",\"A03E\",\"A04T\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
+    "def event_position():\n",
+    "\n",
+    "    filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
+    "    labels = [\"A01T\", \"A01E\", \"A02T\", \"A02E\",\"A03T\",\"A03E\",\"A04T\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
     "\n",
     "\n",
-    "events_with_labels_arrays = {}\n",
+    "    events_with_labels_arrays = {}\n",
     "\n",
-    "for filename, label in zip(filenames, labels):\n",
+    "    for filename, label in zip(filenames, labels):\n",
     "\n",
-    "    filename='../datasets/BCICIV_2a_gdf/'+filename\n",
-    "    raw = mne.io.read_raw_gdf(filename)\n",
+    "        filename='../datasets/BCICIV_2a_gdf/'+filename\n",
+    "        raw = mne.io.read_raw_gdf(filename)\n",
     "\n",
-    "    # Access event information from the raw object\n",
-    "    events, event_id = mne.events_from_annotations(raw)\n",
+    "        # Access event information from the raw object\n",
+    "        events, event_id = mne.events_from_annotations(raw)\n",
     "\n",
-    "    #the list have the dictionary that map each events' id  to events' labels\n",
-    "    events_id_labels = list(event_id.keys())\n",
+    "        #the list have the dictionary that map each events' id  to events' labels\n",
+    "        events_id_labels = list(event_id.keys())\n",
     "\n",
-    "    #create array for gather togther events' type and positions\n",
-    "    temp= np.zeros_like(events)\n",
+    "        #create array for gather togther events' type and positions\n",
+    "        temp= np.zeros_like(events)\n",
     "\n",
     "\n",
-    "    for i in range(len(events)):\n",
-    "        temp[i,0]=events[i,0]\n",
-    "        id=events[i,2]\n",
-    "        temp[i,1]=events_id_labels[id-1] # be in dalil ke dar list event ha ma id 10 drim vali araye events_id_labels k az tarigh key dastresi peyda krdim yedone adadash paiin tare\n",
+    "        for i in range(len(events)):\n",
+    "            temp[i,0]=events[i,0]\n",
+    "            id=events[i,2]\n",
+    "            temp[i,1]=events_id_labels[id-1] # be in dalil ke dar list event ha ma id 10 drim vali araye events_id_labels k az tarigh key dastresi peyda krdim yedone adadash paiin tare\n",
     "\n",
-    "    events_with_labels_arrays[label] = temp\n",
+    "        events_with_labels_arrays[label] = temp\n",
     "\n",
     "    \n",
-    "# Get the sample indices of the events\n",
-    "#event_positions_samples = events[:, 0]\n",
+    "    # Get the sample indices of the events\n",
+    "    #event_positions_samples = events[:, 0]\n",
     "\n",
-    "# Get the corresponding time points from raw\n",
-    "#event_positions_times = raw.times[event_positions_samples]    \n"
+    "    # Get the corresponding time points from raw\n",
+    "    #event_positions_times = raw.times[event_positions_samples]    \n",
+    "\n",
+    "    return events_with_labels_arrays\n"
    ]
   },
   {
@@ -76,33 +80,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
-    "labels = [\"A01T\", \"A01E\", \"A02T\", \"A02E\",\"A03T\",\"A03E\",\"A04T\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
+    "def save_data_in_array():\n",
+    "\n",
+    "    filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
+    "    labels = [\"A01T\", \"A01E\", \"A02T\", \"A02E\",\"A03T\",\"A03E\",\"A04T\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
     "\n",
     "\n",
-    "# Create a dictionary to store data arrays\n",
-    "data_arrays = {}\n",
+    "    # Create a dictionary to store data arrays\n",
+    "    data_arrays = {}\n",
     "\n",
     "\n",
-    "# Iterate over the filenames and labels\n",
-    "for filename, label in zip(filenames, labels):\n",
-    "    # Read the raw data\n",
-    "    filename='../datasets/BCICIV_2a_gdf/'+filename\n",
-    "    raw = mne.io.read_raw_gdf(filename)\n",
-    "    \n",
-    "    # Convert to DataFrame\n",
-    "    df = raw.to_data_frame()\n",
-    "    \n",
-    "    # Store data array in the dictionary\n",
-    "    data_arrays[label] = df.values  # Store the numpy array representation of the DataFrame\n",
+    "    # Iterate over the filenames and labels\n",
+    "    for filename, label in zip(filenames, labels):\n",
+    "        # Read the raw data\n",
+    "        filename='../datasets/BCICIV_2a_gdf/'+filename\n",
+    "        raw = mne.io.read_raw_gdf(filename)\n",
+    "        \n",
+    "        # Convert to DataFrame\n",
+    "        df = raw.to_data_frame()\n",
+    "        \n",
+    "        # Store data array in the dictionary\n",
+    "        data_arrays[label] = df.values  # Store the numpy array representation of the DataFrame\n",
     "\n",
-    "# Access data array for a specific label\n",
-    "example_label = \"A01T\"\n",
-    "example_data_array = data_arrays[example_label]    "
+    "    # # Access data array for a specific label\n",
+    "    # example_label = \"A01T\"\n",
+    "    # example_data_array = data_arrays[example_label]    \n",
+    "\n",
+    "    return data_arrays"
    ]
   },
   {
@@ -119,25 +127,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def create_training_data(data_arrays,events_with_labels_arrays):\n",
+    "    labels = [\"A01T\", \"A02T\", \"A03T\",\"A04T\",\"A05T\",\"A06T\",\"A07T\",\"A08T\",\"A09T\"]\n",
     "\n",
-    "labels = [\"A01T\", \"A02T\", \"A03T\",\"A04T\",\"A05T\",\"A06T\",\"A07T\",\"A08T\",\"A09T\"]\n",
+    "    X_train=[]\n",
     "\n",
-    "X_train=[]\n",
+    "    for label in labels:\n",
     "\n",
-    "for label in labels:\n",
+    "        temp_data=data_arrays[label]\n",
+    "        temp_events=events_with_labels_arrays[label]\n",
+    "        for i in range(len(temp_events)):\n",
+    "        \n",
+    "            if temp_events[i,1]==769 or temp_events[i,1]==770 or temp_events[i,1]==771 or temp_events[i,1]==772 :\n",
     "\n",
-    "    temp_data=data_arrays[label]\n",
-    "    temp_events=events_with_labels_arrays[label]\n",
-    "    for i in range(len(temp_events)):\n",
-    "    \n",
-    "        if temp_events[i,1]==769 or temp_events[i,1]==770 or temp_events[i,1]==771 or temp_events[i,1]==772 :\n",
+    "                ev=temp_events[i,1]\n",
+    "                position=temp_events[i,0]\n",
+    "                for j in range(position, position+1000):\n",
     "\n",
-    "            ev=temp_events[i,1]\n",
-    "            position=temp_events[i,0]\n",
-    "            for j in range(position, position+1000):\n",
-    "\n",
-    "                temp=np.append(temp_data[j,1:23],ev)\n",
-    "                X_train.append(temp)\n",
+    "                    temp=np.append(temp_data[j,1:23],ev)\n",
+    "                    X_train.append(temp)\n",
     "            \n",
     "                \n",
     "                \n"
