create a colab ipynb for google colab and also arrange the code

--- a/main/SE.ipynb
+++ b/main/SE.ipynb
@@ -64,8 +64,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "okernel",
+   "language": "python",
+   "name": "okernel"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
