--- a/main/get_data.ipynb
+++ b/main/get_data.ipynb
@@ -198,9 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mne' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m filename, label \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(filenames, labels):\n\u001b[0;32m      6\u001b[0m     \u001b[39m# Read the raw data\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     filename\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m../datasets/BCICIV_2a_gdf/\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mfilename\n\u001b[1;32m----> 8\u001b[0m     raw \u001b[39m=\u001b[39m mne\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mread_raw_gdf(filename)\n\u001b[0;32m     10\u001b[0m     \u001b[39m# Convert to DataFrame\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     df \u001b[39m=\u001b[39m raw\u001b[39m.\u001b[39mto_data_frame()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mne' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "filenames = [\"A01T.gdf\", \"A01E.gdf\", \"A02T.gdf\", \"A02E.gdf\",\"A03T.gdf\",\"A03E.gdf\",\"A04T.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
