fixing the mistake in the design of the network

--- a/main/get_data.ipynb
+++ b/main/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +142,15 @@
     "\n",
     "                ev=temp_events[i,1]\n",
     "                position=temp_events[i,0]\n",
+    "                nth_sample=[]\n",
     "                for j in range(position, position+1000):\n",
-    "\n",
-    "                    temp=np.append(temp_data[j,1:23],ev)\n",
-    "                    X_train.append(temp)\n",
+    "                    if j==position+999:\n",
+    "                        temp=np.append(temp_data[j,1:23],ev)\n",
+    "                        nth_sample.append(temp)\n",
+    "                        break\n",
+    "                    nth_sample.append(temp_data[j,1:23])\n",
+    "                    \n",
+    "                X_train.append(nth_sample)\n",
     "            \n",
     "                \n",
     "                \n"
