perform data augmentation on test data

--- a/main/data_preprocess.ipynb
+++ b/main/data_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,12 +190,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create data array for feeding "
+    "Combine data and labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,25 +242,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interpolation(X):\n",
+    "def interpolation(raw_x_train):\n",
     "\n",
     "    # Create an empty array to store the interpolated data\n",
-    "    final_interpolated_data = np.zeros((X.shape[0], 1050, X.shape[2]))\n",
+    "    interpolated_data = np.zeros((raw_x_train.shape[0], 1050, raw_x_train.shape[2]))\n",
     "\n",
     "    # Perform interpolation for each sample separately\n",
-    "    for sample_idx in range(X.shape[0]):\n",
+    "    for sample_idx in range(raw_x_train.shape[0]):\n",
     "        # Get the EEG data for the current sample\n",
-    "        sample_data = X[sample_idx, :, :]\n",
+    "        sample_data = raw_x_train[sample_idx, :, :]\n",
     "\n",
     "        # Create an empty array to store the interpolated sample data\n",
-    "        interpolated_sample_data = np.zeros((1050, X.shape[2]))\n",
+    "        interpolated_sample_data = np.zeros((1050, raw_x_train.shape[2]))\n",
     "\n",
     "        # Perform interpolation for each channel separately\n",
-    "        for channel in range(X.shape[2]):\n",
+    "        for channel in range(raw_x_train.shape[2]):\n",
     "            # Get the EEG data for the current channel\n",
     "            channel_data = sample_data[:, channel]\n",
     "\n",
@@ -274,9 +274,9 @@
     "            interpolated_sample_data[:, channel] = interpolated_channel_data\n",
     "\n",
     "        # Assign the interpolated sample data to the final array\n",
-    "        final_interpolated_data[sample_idx, :, :] = interpolated_sample_data\n",
+    "        interpolated_data[sample_idx, :, :] = interpolated_sample_data\n",
     "\n",
-    "    return final_interpolated_data    "
+    "    return interpolated_data    "
    ]
   },
   {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
