the first test commit in 1.2 branch

--- a/main/main.ipynb
+++ b/main/main.ipynb
@@ -527,7 +527,7 @@
     "    callbacks=[early_stopping]\n",
     ")\n",
     "\n",
-    "# Plot training and validation loss\n",
+    "# Plot training and validation loss.\n",
     "plt.plot(history.history['loss'], label='Training Loss')\n",
     "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
     "plt.title('Training and Validation Loss')\n",
