change the data preprocess's functions

--- a/main/data_preprocess.ipynb
+++ b/main/data_preprocess.ipynb
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_event_position():\n",
+    "def get_event_position(filenames,labels):\n",
     "\n",
-    "    filenames = [\"A01T.gdf\", \"A02T.gdf\",\"A03T.gdf\",\"A04T.gdf\", \"A01E.gdf\", \"A02E.gdf\",\"A03E.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
-    "    labels = [\"A01T\", \"A02T\",\"A03T\",\"A04T\", \"A01E\", \"A02E\",\"A03E\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
+    "    #filenames = [\"A01T.gdf\", \"A02T.gdf\",\"A03T.gdf\",\"A04T.gdf\", \"A01E.gdf\", \"A02E.gdf\",\"A03E.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
+    "    #labels = [\"A01T\", \"A02T\",\"A03T\",\"A04T\", \"A01E\", \"A02E\",\"A03E\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
     "\n",
     "\n",
     "    events_with_labels_arrays = {}\n",
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_data_in_array():\n",
+    "def save_data_in_array(filenames,labels):\n",
     "\n",
-    "    filenames = [\"A01T.gdf\",\"A02T.gdf\",\"A03T.gdf\",\"A04T.gdf\",\"A01E.gdf\", \"A02E.gdf\",\"A03E.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
-    "    labels = [\"A01T\", \"A02T\",\"A03T\",\"A04T\", \"A01E\", \"A02E\",\"A03E\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
+    "    #filenames = [\"A01T.gdf\",\"A02T.gdf\",\"A03T.gdf\",\"A04T.gdf\",\"A01E.gdf\", \"A02E.gdf\",\"A03E.gdf\",\"A04E.gdf\",\"A05T.gdf\",\"A05E.gdf\",\"A06T.gdf\",\"A06E.gdf\",\"A07T.gdf\",\"A07E.gdf\",\"A08T.gdf\",\"A08E.gdf\",\"A09T.gdf\",\"A09E.gdf\"]\n",
+    "    #labels = [\"A01T\", \"A02T\",\"A03T\",\"A04T\", \"A01E\", \"A02E\",\"A03E\",\"A04E\",\"A05T\",\"A05E\",\"A06T\",\"A06E\",\"A07T\",\"A07E\",\"A08T\",\"A08E\",\"A09T\",\"A09E\"]\n",
     "\n",
     "\n",
     "    # Create a dictionary to store data arrays\n",
@@ -200,8 +200,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "def combine_data_labels(data_arrays,events_with_labels_arrays):\n",
-    "    labels = [\"A01T\",\"A02T\", \"A03T\",\"A04T\",\"A05T\",\"A06T\",\"A07T\",\"A08T\",\"A09T\"]\n",
+    "def combine_data_labels(data_arrays,events_with_labels_arrays,labels):\n",
+    "    #labels = [\"A01T\",\"A02T\", \"A03T\",\"A04T\",\"A05T\",\"A06T\",\"A07T\",\"A08T\",\"A09T\"]\n",
     "\n",
     "    combined=[]\n",
     "\n",
