--- a/main/data_preprocess.ipynb
+++ b/main/data_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5e76bc32cd26b44ed9b2fd26d72c460b6b32329b27b0412488aa2336ff5fe43d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
